cmake_minimum_required(VERSION 3.5.1)
add_definitions("-std=c++17 -O3")
include_directories(include)
add_executable(io_service_1 src/io_service_1.cpp)
add_executable(io_service_2 src/io_service_2.cpp)
target_link_libraries(io_service_1 boost_system boost_thread gtest pthread)
target_link_libraries(io_service_2 boost_system boost_thread gtest pthread)