cmake_minimum_required(VERSION 3.5.1)
add_executable(io_service_1 io_service_1.cpp)
add_executable(io_service_2 io_service_2.cpp)
add_executable(bind_1 bind.cpp)
add_executable(progress progress.cpp)
target_link_libraries(io_service_1 boost_system boost_thread gtest pthread)
target_link_libraries(io_service_2 boost_system boost_thread gtest pthread)
target_link_libraries(bind_1 boost_system boost_thread gtest pthread)
target_link_libraries(progress boost_system boost_thread gtest pthread)